# ravenlog

./: README.md
.github/workflows/: backend.yml  example.yml
actions/deploy/: action.yml  deploy.sh
backend/: Cargo.toml  flake.nix
backend/src/: author.rs  blog_settings.rs  lib.rs  main.rs  post.rs
example/: .gitignore  Brack.toml  Ravenlog.toml  flake.nix
example/docs/2024/12/31/post/: index.[]  settings.toml
frontend/: package.json  pnpm-lock.yaml
frontend/public/: .gitignore
frontend/src/app/: not-found.tsx  page.tsx
frontend/src/app/_components/ExternalPostcard/: index.tsx
frontend/src/app/_components/ExternalPostsList/: index.tsx  style.css
frontend/src/app/_components/Footer/: index.tsx
frontend/src/app/_components/HeaderWithComment/: index.tsx
frontend/src/app/_components/PostClient/: index.tsx
frontend/src/app/_components/PostHeader/: index.tsx
frontend/src/app/_components/Postcard/: index.tsx
frontend/src/app/_components/PostsList/: style.css
frontend/src/app/_components/PostsSection/: index.tsx
frontend/src/app/_components/RandomComment/: index.tsx
frontend/src/app/_ravenlog_components/Headings/: index.tsx  style.css
frontend/src/app/_ravenlog_components/RavenlogImage/: index.tsx
frontend/src/app/_utils/: types.ts
frontend/src/app/api/og/: route.tsx
frontend/src/app/authors/[author_id]/: page.tsx
frontend/src/app/external_posts/: page.tsx
frontend/src/app/feed/: route.ts
frontend/src/app/tags/[tag]/: page.tsx
src/app/_assets/: blog_settings.json  posts.json
(+6 files in other folders)
